--- a/sp2025/lectures/lecture-03.qmd
+++ b/sp2025/lectures/lecture-03.qmd
@@ -17,10 +17,15 @@ housekeeping_right_column_width="40%"
 housekeeping_vertical_spacer = "25px"
 
 discussion_items = [
-    'This is a placeholder Lecture.'
+    '[Deliverable 1 - Intros](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072356)',
+    '[Deliverable 2 - Team Formation](https://virginiacommonwealth.instructure.com/courses/113813/quizzes/218307)',
+    '[Discussion 1 - ER Modeling](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075913)',
+    '[Homework 1 - DE Tool Review](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072333)',
+    '[Practice Quiz 1 - ER Models](https://virginiacommonwealth.instructure.com/courses/113813/quizzes/211170)'
 ]
 
 lecture_topics = [
+    '[Homework 1 - DE Tool Review](#homework-1---de-tool-review)',
     '[Overview of DB design](#overview-of-database-design)',
     '[Intro to ER Models](#introduction-to-er-models)',
 ]
@@ -30,6 +35,8 @@ lecture_topics = [
 {{< include "./_template-lecture-housekeeping.qmd" >}}
 
 <!-- lecture-block-begin -->
+# Homework 1 - DE Tool Review
+{{< include ../../topics/_homework-1-spring-2025.qmd >}}
 # Overview of Database Design
 {{< include ../../topics/_overview-of-database-design.qmd >}}
 # Intro to ER Models
