--- a/sp2025/lectures/lecture-04.qmd
+++ b/sp2025/lectures/lecture-04.qmd
@@ -17,12 +17,28 @@ housekeeping_right_column_width="40%"
 housekeeping_vertical_spacer = "25px"
 
 discussion_items = [
-    'This is a placeholder Lecture.'
+    '[Deliverable 1 - Intros](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072356)',
+    '[Deliverable 2 - Team Formation](https://virginiacommonwealth.instructure.com/courses/113813/quizzes/218307)',
+    '[Discussion 1 - ER Modeling](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075913)',
+    '[Homework 1 - DE Tool Review](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072333)',
+    '[Practice Quiz 1 - ER Models](https://virginiacommonwealth.instructure.com/courses/113813/quizzes/211170)'
 ]
 
 lecture_topics = [
-    'When ready, the complete lecture will replace this one.'
+    '[ER Diagramming](#er-diagramming)',
+    '[Weak and Strong Entities](#weak-and-strong-entities)'
 ]
 ```
+
+{{< include "./_template-lecture-housekeeping.qmd" >}}
+
+<!-- lecture-block-begin -->
+
+# ER Diagramming
+{{< include ../../topics/_er-diagramming.qmd >}}
+# Weak and Strong Entities
+{{< include ../../topics/_weak-and-strong-entities.qmd >}}
+
+<!-- lecture-block-end -->
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
