--- a/sp2025/lectures/lecture-04.qmd
+++ b/sp2025/lectures/lecture-04.qmd
@@ -17,14 +17,15 @@ housekeeping_right_column_width="40%"
 housekeeping_vertical_spacer = "25px"
 
 discussion_items = [
-    '[Deliverable 1 - Intros](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072356)',
-    '[Deliverable 2 - Team Formation](https://virginiacommonwealth.instructure.com/courses/113813/quizzes/218307)',
-    '[Discussion 1 - ER Modeling](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075913)',
-    '[Homework 1 - DE Tool Review](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072333)',
-    '[Practice Quiz 1 - ER Models](https://virginiacommonwealth.instructure.com/courses/113813/quizzes/211170)'
+    '[Deliverable 1 - Intros](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072356) - Due Sun, 1/19',
+    '[Deliverable 2 - Team Formation](https://virginiacommonwealth.instructure.com/courses/113813/quizzes/218307) - Due Sun, 1/26',
+    '[Discussion 1 - ER Modeling](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075913) - Due Sun, 1/26',
+    '[Homework 1 - DE Tool Review](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072333) - Due Sun, 1/26',
+    '[Practice Quiz 1 - ER Models](https://virginiacommonwealth.instructure.com/courses/113813/quizzes/211170) - Start now!'
 ]
 
 lecture_topics = [
+    '[Intro to ER Models](#introduction-to-er-models)',
     '[ER Diagramming](#er-diagramming)',
     '[Weak and Strong Entities](#weak-and-strong-entities)'
 ]
@@ -33,12 +34,12 @@ lecture_topics = [
 {{< include "./_template-lecture-housekeeping.qmd" >}}
 
 <!-- lecture-block-begin -->
-
+# Intro to ER Models
+{{< include ../../topics/_intro-to-er-models.qmd >}}
 # ER Diagramming
 {{< include ../../topics/_er-diagramming.qmd >}}
 # Weak and Strong Entities
 {{< include ../../topics/_weak-and-strong-entities.qmd >}}
-
 <!-- lecture-block-end -->
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
