--- a/sp2025/details/week-3-details.qmd
+++ b/sp2025/details/week-3-details.qmd
@@ -10,9 +10,9 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 
 # Uncomment as necessary.  These take time to load so only use what you need.
 
-#pages = config.get_pages()
-#quizzes = config.get_quizzes()
-#assignments = config.get_assignment_groups(include=['assignments']) # from Canvas
+pages = config.get_pages()
+quizzes = config.get_quizzes()
+assignments = config.get_assignment_groups(include=['assignments']) # from Canvas
 #files = config.get_files()
 
 # Here is an example of how these are expanded.
@@ -27,9 +27,52 @@ from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, e
 
 ```
 
-<p class="lead">Welcome to a new week!</p>
+<p class="lead">We're focused on CRAFTING entity-relation models!</p>
 
-*Details will be updated closer to the week.*
+```{python}
+print(f"""
+{expand_page(pages,"Last week","week 2 - front page",url_type="anchor")} we introduced a TON of material
+on entity-relation modeling. We've got a <a href="https://lowkeylabs.github.io/cmsc408-course-admin/guide/er-models/">study guide</a> that summarizes the material, too.
+
+
+This week we're building practice creating entition-relation diagrams.  There are two focii - getting practice with the tools (graphviz and mermaid), and getting practice translating real world objects into entity-relation
+models.
+
+""")
+```
+
+## Things you should be doing this week
+
+```{python}
+print(f"""
+At this point, you should have a team for the {expand_page(pages,"Semester-long project","resource-course-project",url_type="anchor")}.
+
+What kind of database are you going to build? In {expand_assignment(assignments,"Deliverable 3","Deliverable 3 - Ideation",url_type="anchor")} you'll be working with your teammates on Harmonize to kick around ideas.  A
+key learning objective for this assignment is learning to work as part of a team to define and accomplish
+common goals.
+
+Once you have your project <em>generally scoped</em>, you need to pitch your idea to me in {expand_assignment(assignments,"Deliverable 4","Deliverable 4 - video pitch",url_type="anchor")}.  You make a video (using zoom or whatever) and submit it to me for review.  <b>I MUST APPROVE</b> all topics prior to you moving forward.
+This approval comes in the form of a passing grade for deliverable 4.
+
+While all this project stuff is happening, there is the perfunctory {expand_assignment(assignments,"Homework 2","Homework 2 - Entity Relation Models",url_type="anchor")} on ER Models. It is here (in this assignment)
+that you'll get lots of practice on ER Modeling.
+""")
+```
+
+## Things that you should have already completed
+
+Don't get too far behind!
+
+```{python}
+print(f"""
+1. <b>Got your partner for the semester project?</b> - {expand_assignment(assignments,"Deliverable 1","Deliverable 1 - Intros",url_type="anchor")} was designed to help you meet potential partners, {expand_assignment(assignments,"Deliverable 2","deliverable 2 - team formation",url_type="anchor")} is how you communicate your team formation to me.
+
+2. Keep practicing with <b>{expand_quiz(quizzes, "Practice Quiz 1","practice quiz 1", url_type="anchor", target="_blank")}</b> and when you're ready, take the <b>{expand_quiz(quizzes, "Quiz 1","Quiz 1 - Entity-relation models - Requires Respondus LockDown Browser + Webcam", url_type="anchor", target="_blank")} due this week.
+
+3. Keep working on the other deliverables!  They are accepted LATE but don't get too far behind!
+""")
+```
+
 
 
 ```{python}
