--- a/sp2025/lectures/lecture-05.qmd
+++ b/sp2025/lectures/lecture-05.qmd
@@ -14,9 +14,10 @@ housekeeping_margin_column_width = "9%"
 housekeeping_left_column_width="45%"
 housekeeping_right_column_width="40%"
 
-housekeeping_vertical_spacer = "0px"
+housekeeping_vertical_spacer = "-20px"
 
 discussion_items = [
+    'Homeworks and README files',
     '[Deliverable 3 - Harmonize Ideation](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1072358) - due Sun, 2/2',
     '[Deliverable 4 - Video Pitch](https://virginiacommonwealth.instructure.com/courses/113813/assignments/1075768) - due Sun, 2/9',
     '[Quiz 1 - ER Models](https://virginiacommonwealth.instructure.com/courses/113813/quizzes/211165) - due THU, 1/30',
