--- a/topics/_taking-stock-after-er-models.qmd
+++ b/topics/_taking-stock-after-er-models.qmd
@@ -1,5 +1,4 @@
-
-# Catching our collective breaths and taking stock
+<!-- # Catching our collective breaths and taking stock -->
 
 ## Course to date
 
