--- a/sp2025/teams/teaming.qmd
+++ b/sp2025/teams/teaming.qmd
@@ -23,7 +23,7 @@ Process teams and prepare a clean teaming workbook.
 **Key parameters for this report**
 ```{python}
 SQLITE_DB_FILE = "teaming.db"
-SOURCE_SURVEY_RESULTS = "cmsc408-sp2025-deliverable-2-teaming-survey.csv"  # this file is downloaded from Canvas
+SOURCE_SURVEY_RESULTS = "Deliverable 2 - Team formation Survey Student Analysis Report (3).csv"  # this file is downloaded from Canvas
 CLEAN_GROUP_MAPPING_FILE = "teams_clean.xlsx"  # an interim file for potential later use
 CANVAS_GROUP_SEED_FILE = "sp2025-roster-from-groups-import.csv"  # downloaded from Canvas for editing
 CANVAS_GROUP_UPLOAD_FILE = "sp2025-groups-upload.csv"
@@ -60,7 +60,6 @@ df = pd.read_csv(SOURCE_SURVEY_RESULTS)
 
 ```{python}
 #| echo: false
-
 
 # uncomment this to generate a list (see below) for
 # renaming columns.  This function generates python
@@ -116,6 +115,22 @@ df = df.drop(['section','section_id','section_sis_id','submitted','attempt','cnt
 df.columns
 ```
 
+Clean VID values
+
+```{python}
+
+def clean_vid(value):
+    if pd.isna(value):
+        return value
+    value = str(value).upper()
+    return value if value.startswith('V') else f'V{value}'
+
+vid_columns = ['sis_id', 'partner_2_vid', 'partner_3_vid']
+df[vid_columns] = df[vid_columns].map(clean_vid)
+
+
+```
+
 ### Store dataframe to data base
 
 Store the uncleaned, raw data to the database.
@@ -140,15 +155,74 @@ happens when a student doesn't input the correct name, or forgot to add their te
 
 cleaned_df = df.copy()
 
-#cleaned_df.loc[cleaned_df['team_name']=='; DROP TABLE Users;','team_name'] = '; DROP TABLE Users;'
+cleaned_df.loc[cleaned_df['team_name']=='408 Crew','team_name'] = '408 Crew'
+cleaned_df.loc[cleaned_df['team_name']=='408 crew','team_name'] = '408 Crew'
+cleaned_df.loc[cleaned_df['team_name']=='A Squared','team_name'] = 'A-squared'
+cleaned_df.loc[cleaned_df['team_name']=='a^2','team_name'] = 'A-squared'
+cleaned_df.loc[cleaned_df['team_name']=='Arceus','team_name'] = 'Team Arceus'
+cleaned_df.loc[cleaned_df['team_name']=='Big Stink','team_name'] = 'Big Stink'
+cleaned_df.loc[cleaned_df['team_name']=='Binary Brains','team_name'] = 'Binary Brains'
+cleaned_df.loc[cleaned_df['team_name']=='Bookworms','team_name'] = 'Bookworms'
+cleaned_df.loc[cleaned_df['team_name']=='Bryce Strobel','team_name'] = 'Monacan Chiefs'
+cleaned_df.loc[cleaned_df['team_name']=='Buff and Bumble','team_name'] = 'Buff and Bumble'
+cleaned_df.loc[cleaned_df['team_name']=='Byte Sized Bandits','team_name'] = 'Byte Sized Bandits'
+cleaned_df.loc[cleaned_df['team_name']=='CamboViet','team_name'] = 'CamboViet'
+cleaned_df.loc[cleaned_df['team_name']=='Cloud Navigators','team_name'] = 'Cloud Navigators'
+cleaned_df.loc[cleaned_df['team_name']=='CMSC 408','team_name'] = 'CMSC 408'
+cleaned_df.loc[cleaned_df['team_name']=='Code Crusaders','team_name'] = 'Code Crusaders'
+cleaned_df.loc[cleaned_df['team_name']=='CtrlAltElite','team_name'] = 'CtrlAltElite'
+cleaned_df.loc[cleaned_df['team_name']=='Data Demons','team_name'] = 'Data Demons'
+cleaned_df.loc[cleaned_df['team_name']=='Data Dynamos','team_name'] = 'Data Dynamos'
+cleaned_df.loc[cleaned_df['team_name']=='Data Knights','team_name'] = 'Data Knights'
+cleaned_df.loc[cleaned_df['team_name']=='Data Legends','team_name'] = 'Data Legends'
+cleaned_df.loc[cleaned_df['team_name']=='Database FC','team_name'] = 'Database FC'
+cleaned_df.loc[cleaned_df['team_name']=='DataTrio','team_name'] = 'Data Trio'
+cleaned_df.loc[cleaned_df['team_name']=='Entergalactic Coders','team_name'] = 'Entergalactic Coders'
+cleaned_df.loc[cleaned_df['team_name']=='Fulcrum','team_name'] = 'Fulcrum'
+cleaned_df.loc[cleaned_df['team_name']=='G&C','team_name'] = 'G&C'
+cleaned_df.loc[cleaned_df['team_name']=='Goobers','team_name'] = 'Goobers'
+cleaned_df.loc[cleaned_df['team_name']=='Millionaire Minions','team_name'] = 'Millionaire Minions'
+cleaned_df.loc[cleaned_df['team_name']=='Minion','team_name'] = 'Minion'
+cleaned_df.loc[cleaned_df['team_name']=='Monacan Chiefs','team_name'] = 'Monacan Chiefs'
+cleaned_df.loc[cleaned_df['team_name']=='Monkey Munchers','team_name'] = 'Monkey Munchers'
+cleaned_df.loc[cleaned_df['team_name']=='nan','team_name'] = 'nan'
+cleaned_df.loc[cleaned_df['team_name']=='not yet decided','team_name'] = 'not yet decided'
+cleaned_df.loc[cleaned_df['team_name']=='Open Valve','team_name'] = 'Open Valve'
+cleaned_df.loc[cleaned_df['team_name']=='Pixel Pioneers','team_name'] = 'Pixel Pioneers'
+cleaned_df.loc[cleaned_df['team_name']=='Random Word Generators','team_name'] = 'Random Word Generators'
+cleaned_df.loc[cleaned_df['team_name']=='Relational Rebels','team_name'] = 'Relational Rebels'
+cleaned_df.loc[cleaned_df['team_name']=='Schema Squad','team_name'] = 'Schema Squad'
+cleaned_df.loc[cleaned_df['team_name']=='Secondhand Friends','team_name'] = 'Secondhand Friends'
+cleaned_df.loc[cleaned_df['team_name']=='Static Duo','team_name'] = 'Static Duo'
+cleaned_df.loc[cleaned_df['team_name']=='static duo','team_name'] = 'Static Duo'
+cleaned_df.loc[cleaned_df['team_name']=='Strikers','team_name'] = 'Strikers'
+cleaned_df.loc[cleaned_df['team_name']=='Team Arceus','team_name'] = 'Team Arceus'
+cleaned_df.loc[cleaned_df['team_name']=='Team Awesome','team_name'] = 'Team Awesome'
+cleaned_df.loc[cleaned_df['team_name']=='team awesome','team_name'] = 'Team Awesome'
+cleaned_df.loc[cleaned_df['team_name']=='Team Crusaders','team_name'] = 'Team Crusaders'
+cleaned_df.loc[cleaned_df['team_name']=='Team DC','team_name'] = 'Team DC'
+cleaned_df.loc[cleaned_df['team_name']=='Team Umizumi','team_name'] = 'Team UmiZumi'
+cleaned_df.loc[cleaned_df['team_name']=='Team UmiZumi','team_name'] = 'Team UmiZumi'
+cleaned_df.loc[cleaned_df['team_name']=='The Data Duo','team_name'] = 'Data Trio'
+cleaned_df.loc[cleaned_df['team_name']=='The Optimizers','team_name'] = 'The Optimizers'
+cleaned_df.loc[cleaned_df['team_name']=='the strikers','team_name'] = 'Strikers'
+cleaned_df.loc[cleaned_df['team_name']=='The Triangles','team_name'] = 'The Triangles'
+cleaned_df.loc[cleaned_df['team_name']=='Warrior of Bytes','team_name'] = 'Warriors of Bytes'
+cleaned_df.loc[cleaned_df['team_name']=='Warriors of Btye','team_name'] = 'Warriors of Bytes'
+cleaned_df.loc[cleaned_df['team_name']=='Warriors of Byte','team_name'] = 'Warriors of Bytes'
 
 ## Assigning students to teams
 
-#cleaned_df.loc[cleaned_df['name']=='Ghulam Mujtaba Qasimi','team_name'] = 'Data Detectives'
-#cleaned_df.loc[cleaned_df['name']=='Erin Anderson','team_name'] = 'RamsNationData'
-#cleaned_df.loc[cleaned_df['name']=='Chris Hoang','team_name'] = 'Alaskan Bullworms'
-#cleaned_df.loc[cleaned_df['name']=='Noor Tabanjeh','team_name'] = 'The Girls Room'
+cleaned_df.loc[cleaned_df['name']=='Lindsey Marandina','team_name'] = '408 Crew'
+cleaned_df.loc[cleaned_df['name']=='Carlos Colon','team_name'] = 'Entergalactic Coders'
 
+cleaned_df.loc[cleaned_df['name'] == 'Diego Rivera', 'team_name'] = 'Team DC'  ## Caitlin : 
+cleaned_df.loc[cleaned_df['name'] == 'Isha Malik', 'team_name'] = 'Data Trio'  ## Mack Hicks : DataTrio
+cleaned_df.loc[cleaned_df['name'] == 'Jacob Stephens', 'team_name'] = 'Big Stink'  ## Its Just Me : 
+cleaned_df.loc[cleaned_df['name'] == 'Mahmuda Sarker', 'team_name'] = 'Strikers'  ## Sagai Taylor : Strikers
+cleaned_df.loc[cleaned_df['name'] == 'Nehemiah Akeredolu', 'team_name'] = 'na'  ## Mohamed Elnafe : 
+
+#cleaned_df.loc[cleaned_df['name']=='Ghulam Mujtaba Qasimi','team_name'] = 'Data Detectives'
 ## Renaming this team because two groups used it
 
 #cleaned_df.loc[cleaned_df['name']=='Diya Ram Mohan','team_name'] = 'Tech Titans Redux'
@@ -164,11 +238,28 @@ contains a reference one-record-per-student.
 
 ```{python}
 # Add missing records from a later step!
-#new_row_df = pd.DataFrame({'name':['Yash Upadhyay'], 'sis_id': ['V00903976'] ,'team_name': ['mantle']})
-#cleaned_df = pd.concat([cleaned_df, new_row_df], ignore_index=True)
+new_rows = [
+    {'name':'SeyiYash Upadhyay', 'sis_id': 'V01011000' ,'team_name': 'Entergalactic Coders'},
+    {'name':'Caitlin Berdeguez', 'sis_id': 'V01013162' ,'team_name': 'Team DC'},
+    {'name':'Braeden Ferguson', 'sis_id': 'V00950948' ,'team_name': 'Schema Squad'},
+    {'name':'Austin Glass', 'sis_id': 'V00280987' ,'team_name': 'ag'},
+    {'name':'Smeetha James', 'sis_id': 'V00980840' ,'team_name': 'sj'},
+    {'name':'Ahmed Salih', 'sis_id': 'V00994293' ,'team_name': 'as'},
+    {'name':'Andre Smith', 'sis_id': 'V00993317' ,'team_name': 'asm'},
+    {'name':'Marcio Tejeda', 'sis_id': 'V00959413' ,'team_name': 'mt'},
+    {'name':'Di-Huy Tran', 'sis_id': 'V01045876' ,'team_name': 'dt'},    
+    ]
+cleaned_df = pd.concat([cleaned_df, pd.DataFrame(new_rows)], ignore_index=True)
 ```
 
 ### Helper codes
+
+```{python}
+# Add team size back to original dataframe
+
+cleaned_df['team_size'] = cleaned_df.groupby('team_name')['team_name'].transform('count')
+
+```
 
 The two blocks of code below generate python that can be pasted in this report.  They python
 can then be edited to clean the data.
@@ -187,9 +278,19 @@ if (1):
 ```
 
 ```{python}
+## Uncomment to generate list of students and teams for later assignment
 if (1):
-    for index, row in cleaned_df[ (cleaned_df['team_name'].isna()) | (cleaned_df['team_name']=='nan') ].iterrows():
-        print(f"cleaned_df.loc[cleaned_df['name']=='{row['name']}','team_name'] = 'nan'")
+
+    for index, row in cleaned_df[cleaned_df['team_size'] == 1].iterrows():
+        # Safely retrieve the partner's team name
+        partner_2_team_name_series = cleaned_df.loc[cleaned_df['sis_id'] == row['partner_2_vid'], 'team_name']
+        
+        # Extract first valid value if exists, otherwise set to empty string
+        partner_2_team_name = partner_2_team_name_series.iloc[0] if not partner_2_team_name_series.empty else ""
+
+        # Print formatted statement
+        print(f"cleaned_df.loc[cleaned_df['name'] == '{row['name']}', 'team_name'] = '{row['team_name']}'  ## {row['partner_2_name']} : {partner_2_team_name}")
+
 
 ```
 
@@ -211,7 +312,7 @@ conn = sqlite3.connect( SQLITE_DB_FILE )
 cleaned_df.to_sql('clean_teams', conn, if_exists='replace', index=False)
 conn.close()
 
-cleaned_df.to_excel( CLEAN_GROUP_MAPPING_FILE, index=False)
+cleaned_df.sort_values(by=["team_size","team_name"]).to_excel( CLEAN_GROUP_MAPPING_FILE, index=False)
 ```
 
 ## Explore the cleaned data
@@ -239,13 +340,14 @@ Markdown(team_size_table.to_markdown( index=False ))
 
 ### Teams with one member
 
-Details of any teams with
+Details of any teams with just one member.
+
 ```{python}
-#| echo: false
+#| output: asis
 team_sizes = cleaned_df.groupby('team_name').size().reset_index(name='team_size')
 teams_of_size_x = team_sizes[team_sizes['team_size'].isin([1])]
 if len(teams_of_size_x)>0:
-    Markdown( cleaned_df[ cleaned_df['team_name'].isin( teams_of_size_x['team_name'] ) ].to_markdown( index=False) )
+    print( cleaned_df[ cleaned_df['team_name'].isin( teams_of_size_x['team_name'] ) ].to_markdown( index=False) )
 else:
     print(f"**All clean!  No teams of size 1**")
 ```
@@ -280,7 +382,12 @@ canvas_df = pd.read_csv( CANVAS_GROUP_SEED_FILE )
 merged_df = pd.merge(canvas_df, cleaned_df, left_on='user_id', right_on='sis_id',  how='left')
 no_match_df = merged_df[merged_df['sis_id'].isna()]
 if no_match_df.shape[0]>0:
-    Markdown( no_match_df.to_markdown( index=False) )
+
+    for index, row in no_match_df.iterrows():
+        # Print formatted statement
+        print(f"{{'name':'{row["name_x"]}', 'sis_id': '{row["user_id"]}' ,'team_name': '(missing)'}},")
+
+#    print( no_match_df.to_markdown( index=False) )
 else:
     print("**All students submitted a survey.**")
 ```
