--- a/sp2025/lectures/lecture-08.qmd
+++ b/sp2025/lectures/lecture-08.qmd
@@ -3,11 +3,35 @@ date: '2025-02-06'
 lecture-id: 8
 title: Relational Algebra 2
 ---
-
 ```{python}
 #| echo: false
 #| label: setup
-lecture_id = 8
+from cnvsapi.config import config
+from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, expand_file
+
+# Uncomment as necessary.  These take time to load so only use what you need.
+
+#pages = config.get_pages()
+#quizzes = config.get_quizzes()
+assignments = config.get_assignment_groups(include=['assignments']) # from Canvas
+quizzes = config.get_quizzes()
+
+discussion_items = [
+    f'{expand_quiz(quizzes, "Practice Quiz 2 ","practice quiz 2", url_type="anchor", target="_blank")} - due Feb. 4, TUE',
+    f'{expand_assignment(assignments,"Homework 2 - ER Modeling ","Homework 2 - Entity Relation Models",url_type="anchor")} - due Feb. 4, TUE',
+    f'{expand_assignment(assignments,"Discussion 2 - Relational Algebra","Discussion 2 - Relational Alg.",url_type="anchor")} - due Feb. 9, SUN',
+    f'{expand_assignment(assignments,"Del.4 - Video Pitch","Deliverable 4 - Video Pitch",url_type="anchor")} - due Feb. 9, SUN',
+]
+
+lecture_topics = [
+    '[Deliverable 4 Notes](#deliverable-4-notes)',
+    '[Set Operations](#set-operations)',
+    '[Join Operations](#join-operations)',
+    '[Renaming and Division](#rename-and-division)',
+]
+
+
+lecture_id = 7
 n_rows = 8
 
 housekeeping_margin_column_width = "9%"
@@ -16,13 +40,20 @@ housekeeping_right_column_width="40%"
 
 housekeeping_vertical_spacer = "25px"
 
-discussion_items = [
-    'This is a placeholder Lecture.'
-]
-
-lecture_topics = [
-    'When ready, the complete lecture will replace this one.'
-]
 ```
+
+
+{{< include "./_template-lecture-housekeeping.qmd" >}}
+
+<!-- lecture-block-begin -->
+# Practice Quiz 2 - Relational Algebra
+{{< include ../../topics/_practice-quiz-2-relational-algebra-sp2025.qmd >}}
+# Set Operations
+{{< include ../../topics/_set-operations.qmd >}}
+# Join Operations
+{{< include ../../topics/_join-operations.qmd >}}
+# Renaming and Division
+{{< include ../../topics/_renaming-and-division.qmd >}}
+<!-- lecture-block-end -->
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
