--- a/sp2025/lectures/lecture-09.qmd
+++ b/sp2025/lectures/lecture-09.qmd
@@ -3,11 +3,32 @@ date: '2025-02-11'
 lecture-id: 9
 title: Analysis and Normal Forms 1
 ---
-
 ```{python}
 #| echo: false
 #| label: setup
-lecture_id = 9
+from cnvsapi.config import config
+from cnvsapi.markup_utils import  expand_assignment, expand_page, expand_quiz, expand_file
+
+# Uncomment as necessary.  These take time to load so only use what you need.
+
+#pages = config.get_pages()
+#quizzes = config.get_quizzes()
+assignments = config.get_assignment_groups(include=['assignments']) # from Canvas
+quizzes = config.get_quizzes()
+
+discussion_items = [
+    f'{expand_quiz(quizzes, "Practice Quiz 2 ","practice quiz 2", url_type="anchor", target="_blank")} - due Feb. 4, TUE',
+    f'{expand_assignment(assignments,"Homework 3 - ER Modeling ","Homework 3 - Modeling your world",url_type="anchor")} - due Feb. 4, TUE',
+]
+
+lecture_topics = [
+    '[Homework 3 - Modeling Your World](#homework-3---modeling-your-world)',
+    '[Join Operations](#join-operations)',
+    '[Renaming and Division](#rename-and-division)',
+]
+
+
+lecture_id = 7
 n_rows = 8
 
 housekeeping_margin_column_width = "9%"
@@ -16,13 +37,18 @@ housekeeping_right_column_width="40%"
 
 housekeeping_vertical_spacer = "25px"
 
-discussion_items = [
-    'This is a placeholder Lecture.'
-]
-
-lecture_topics = [
-    'When ready, the complete lecture will replace this one.'
-]
 ```
+
+
+{{< include "./_template-lecture-housekeeping.qmd" >}}
+
+<!-- lecture-block-begin -->
+# Homework 3 - Modeling your world
+{{< include ../../topics/_homework-3-modeling-your-world-sp2025.qmd >}}
+# Join Operations
+{{< include ../../topics/_join-operations.qmd >}}
+# Renaming and Division
+{{< include ../../topics/_renaming-and-division.qmd >}}
+<!-- lecture-block-end -->
 
 {{< include "./_template-lecture-housekeeping.qmd" >}}
