--- a/topics/_relational-models.qmd
+++ b/topics/_relational-models.qmd
@@ -1,5 +1,38 @@
 <!-- # Relational Models -->
 
+
+## Relational Model - 1970
+
+Codd, E. F. (1970). *A relational model of data for large shared data banks*. *Communications of the ACM, 13*(6), 377–387. [https://doi.org/10.1145/362384.362685](https://doi.org/10.1145/362384.362685)
+
+:::: {.columns}
+::: {.column width=47%}
+
+::: {style="font-size:10pt"}
+1. **Data is Represented as Relations (Tables)**  
+   - Codd introduced the concept of **relations**, which are mathematically defined as sets of tuples (rows) with attributes (columns). This formal structure provides a consistent and logical way to store and manipulate data.
+
+2. **Data Independence and Normalization**  
+   - The relational model promotes **data independence**, meaning applications don’t need to worry about the underlying data storage structure. He also introduced the idea of **normalization** to reduce redundancy and improve data integrity.
+
+3. **Use of a High-Level Language (Relational Algebra)**  
+   - Codd proposed using **relational algebra** and **relational calculus** as a mathematical foundation for querying data, emphasizing that users should interact with the database using **declarative** queries rather than navigating storage structures directly.
+
+4. **Keys and Integrity Constraints**  
+   - The paper introduced the importance of **primary keys** to uniquely identify tuples and defined integrity constraints (e.g., uniqueness and referential integrity) to ensure consistency and correctness of the data.
+
+This work eventually led to the development of SQL and the modern relational database systems we use today.
+:::
+
+:::
+::: {.column width=6%}
+:::
+::: {.column width=47%}
+[![](.//assets/codd_acm_article.png)](https://www.seas.upenn.edu/~zives/03f/cis550/codd.pdf)
+:::
+::::
+
+
 ## Relational Model - Entities
 
 :::: {.columns}
@@ -82,8 +115,8 @@ For example:
 We can also add modifiers to individual attributes:
 
 * student( id [PK], name, year )
-* course( id [PK], title, credit_hours)
-* student_course( id [PK], student_id[FK], course_id[FK])
+* course( <u>course_id</u>, title, credit_hours)
+* student_course( <u>id</u>, student_id[FK], course_id[FK])
 
 :::
 ::::
@@ -145,7 +178,6 @@ digraph RelationalDataModel {
 :::
 ::::
 
-
 ## Relational Model - Keys
 
 * A **key** can be any field (or fields) in a table.
@@ -154,7 +186,7 @@ digraph RelationalDataModel {
 * A record can have multiple keys, as long as they uniquely identify the record.
     - A *super key* is a key of any size (one or more fields)
     - A *candidate key* is a key of minimal size (minimal number of fields)
-    - A *primary key* is selected by the designer from one of the *candidate key* to become the primary identifier of the tuples in the relation
+    - A *primary key* is selected *by the designer* from one of the *candidate key* to become the primary identifier of the tuples in the relation
 * Any two tuples in the relation are prohibited from having the same value on the key attributes at the same time
 * *Primary keys* are typically size 1 but not necessarily.
 * Every relation must have a primary key
@@ -233,7 +265,8 @@ Attributes which are FKs do not need to have the same name as the referenced key
 
 Cardinalty and participation are represented through *foreign keys* and *integrity constraints*.
 
-## Relational Model - Relationship example with data
+## Relational Model - Foreign Key Example
+
 
 :::: {.columns}
 ::: {.column width=30%}
@@ -292,6 +325,73 @@ digraph RelationalDataModel {
 :::
 ::::
 
+
+## Relational Model - Foreign Key Example
+
+:::: {.columns}
+::: {.column width=30%}
+### Questions
+
+* What changed in the students table?
+
+* What are the primary keys in each table?
+
+* What is the column labled "crs_id"?
+
+* What is the cardinality and participation of these tables?
+
+:::
+::: {.column width=70%}
+```{dot}
+//| echo: false
+//| fig-width: 550px
+//| fig-height: 250px
+digraph RelationalDataModel {
+
+    graph [nodesep=1.0 bgcolor=transparent]
+    node [shape=plaintext fontname="Arial" fontsize=10 color="cyan"];
+
+    student [label=<
+<table border="0" cellborder="1" cellspacing="0">
+    <tr><td colspan="4" align="center"><b>Students</b></td></tr>
+    <tr><td><b>name</b></td><td><b>year</b></td><td><b>id</b></td><td><b>crs_id</b></td></tr>
+    <tr><td align="left">Amara Singh</td><td>1991</td><td>1</td><td port="r1">NULL</td></tr>
+    <tr><td align="left">Youssef El-Mohamed</td><td>1987</td><td>2</td><td port="r2">1</td></tr>
+    <tr><td align="left">Chen Wei</td><td>1978</td><td>3</td><td port="r3">NULL</td></tr>
+    <tr><td align="left">Olga Petrova</td><td>NULL</td><td>4</td><td port="r4">2</td></tr>
+    <tr><td align="left">Kwame Nkrumah</td><td>1965</td><td>5</td><td port="r5">3</td></tr>
+    <tr><td align="left">Lucia Gonzalez</td><td>1980</td><td>6</td><td port="r6">3</td></tr>
+</table>
+    >];
+
+    course [label=<
+<table border="0" cellborder="1" cellspacing="0">
+    <tr><td colspan="3" align="center"><b>Courses</b></td></tr>
+    <tr><td><b>id</b></td><td><b>name</b></td><td><b>hours</b></td></tr>
+    <tr><td port="">NULL</td><td>NULL</td><td>NULL</td></tr>
+    <tr><td port="c1">1</td><td>CMSC391</td><td>3</td></tr>
+    <tr><td port="">NULL</td><td>NULL</td><td>NULL</td></tr>
+    <tr><td port="c2">2</td><td>CMSC475</td><td>3</td></tr>
+    <tr><td port="c3">3</td><td>CMSC508</td><td>3</td></tr>
+    <tr><td port="c3a">3</td><td>CMSC508</td><td>3</td></tr>
+</table>
+    >];
+
+    student:r2 -> course:c1 [label="" dir=none constraint=false];
+    student:r4 -> course:c2 [label="" dir=none constraint=false];
+    student:r5 -> course:c3 [label="" dir=none constraint=false];
+    student:r6 -> course:c3a [label="" dir=none constraint=false];
+
+}
+
+```
+
+:::
+::::
+
+
+
+
 ## Relational Model - Integrity Constraints
 
 An *integrity constraint* is:
@@ -324,10 +424,10 @@ An *integrity constraint* is:
 Using *integrity constraints* the DBMS will maintain a perfect state for your database. By specifying integrity constraints, a designer lets the DBMS do the work for them.
 
 
-## Relational Model - Relationship example with data
+## Relational Model - One-to-Many example
 
 :::: {.columns}
-::: {.column width=30%}
+::: {.column width=20%}
 
 ```{mermaid}
 %%| echo: false
@@ -351,13 +451,13 @@ erDiagram
 ```
 
 :::
-::: {.column width=60%}
+::: {.column width=80%}
 
 
 ```{dot}
 //| echo: false
-//| fig-width: 450px
-//| fig-height: 200px
+//| fig-width: 550px
+//| fig-height: 250px
 digraph RelationalDataModel {
 
     graph [nodesep=1.1 bgcolor=transparent]
@@ -416,7 +516,105 @@ digraph RelationalDataModel {
 :::
 ::::
 
-## Relational Model - Relationship example with data
+## Relational Model - One-to-Many example
+
+:::: {.columns}
+::: {.column width=20%}
+
+```{mermaid}
+%%| echo: false
+erDiagram
+
+    AUTHORS ||--o{ BOOKS : "have"
+    
+    AUTHORS {
+        int id
+        string name
+        date birthdate
+    }
+    
+    BOOKS {
+        int id
+        string title
+        date publication_date
+        int author_id
+    }
+
+```
+
+:::
+::: {.column width=80%}
+
+
+```{dot}
+//| echo: false
+//| fig-width: 550px
+//| fig-height: 250px
+digraph RelationalDataModel {
+
+    graph [nodesep=1.1 bgcolor=transparent]
+    // Define the node shape
+    node [shape=plaintext fontname="Arial" fontsize=10 color="cyan"];
+
+    // Define the Authors node with a table containing several rows of data
+    
+    // Define the Books node with a table containing several rows of data
+    Books [label=<
+        <table border="0" cellborder="1" cellspacing="0">
+            <tr><td><b>id (PK)</b></td><td><b>title</b></td><td><b>publication_date</b></td><td><b>author_id (FK)</b></td></tr>
+            <tr><td>1</td><td>Happy days</td><td>2000-01-01</td><td port="f1">1</td></tr>
+            <tr><td>2</td><td>Sad days</td><td>2005-06-15</td><td port="f2">3</td></tr>
+            <tr><td>3</td><td>Jason Days</td><td>2010-03-10</td><td port="f3">2</td></tr>
+            <tr><td>4</td><td>Craw Days</td><td>2015-04-31</td><td port="f4">2</td></tr>
+            <tr><td>5</td><td>Days of Thunder</td><td>2022-01-23</td><td port="f5">3</td></tr>
+            <tr><td>&nbsp;</td><td></td><td></td><td></td></tr>
+            <tr><td>6</td><td>Thunder road</td><td>2021-12-01</td><td port="f6">1</td></tr>
+            <tr><td>7</td><td>Road of plenty</td><td>2011-02-21</td><td port="f7">3</td></tr>
+            <tr><td>8</td><td>Plenty of what?</td><td>2013-01-12</td><td port="f8">5</td></tr>
+        </table>
+    >];
+
+    Authors [label=<
+        <table border="0" cellborder="1" cellspacing="0">
+            <tr><td><b>id (PK)</b></td><td><b>name</b></td><td><b>birthdate</b></td></tr>
+            <tr><td port="f1">1</td><td>DiShawn</td><td>1980-01-01</td></tr>
+            <tr><td port="f3b">3</td><td>Halle</td><td>1975-05-14</td></tr>
+            <tr><td port="f2">2</td><td>Christopher</td><td>1975-05-14</td></tr>
+            <tr><td port="f2a">2</td><td>Christopher</td><td>1975-05-14</td></tr>
+            <tr><td port="f3">3</td><td>Halle</td><td>1975-05-14</td></tr>
+            <tr><td port="f4">4</td><td>Fayad</td><td>1990-02-20</td></tr>
+            <tr><td port="f1a">1</td><td>DiShawn</td><td>1980-01-01</td></tr>
+            <tr><td port="f3a">3</td><td>Halle</td><td>1975-05-14</td></tr>
+            <tr><td port="f5">5</td><td>Hermes</td><td>1960-12-29</td></tr>
+        </table>
+    >];
+
+    // Define the foreign key relationships from Books to Authors
+    Books:f1 -> Authors:f1 [label="" dir=none constraint=false];
+    Books:f3 -> Authors:f2 [dir=none constraint=false];
+    Books:f4 -> Authors:f2a [dir=none constraint=false];
+    Books:f6 -> Authors:f1a [dir=none constraint=false];
+    Books:f8 -> Authors:f5 [dir=none constraint=false];
+
+    Books:f2 -> Authors:f3b [dir=none constraint=false];
+    Books:f5 -> Authors:f3 [dir=none constraint=false];
+    Books:f7 -> Authors:f3a [dir=none constraint=false];
+}
+
+```
+### Questions
+
+* Does the ER diagram on the left match the tables on the right?
+* How do we ensure partial or total participation?
+* Write the detailed relation sets for this model.
+* How would we modify the tables to create a many-to-many relationship?
+
+
+:::
+::::
+
+
+## Relational Model - Many-to-Many example
 
 :::: {.columns}
 ::: {.column width=20%}
@@ -540,7 +738,7 @@ digraph RelationalDataModel {
 :::
 ::::
 
-## Relational Model - Relationship example with data
+## Relational Model - Many-to-Many example
 
 :::: {.columns}
 ::: {.column width=20%}
