--- a/sp2025/lectures/lecture-08.qmd
+++ b/sp2025/lectures/lecture-08.qmd
@@ -74,4 +74,6 @@ and eventually, what it means to records and tables.-->
 # Practice Quiz 2 - Relational Algebra
 {{< include ../../topics/_practice-quiz-2-relational-algebra-sp2025.qmd >}}
 
+<!-- lecture-block-end -->
+
 {{< include "./_template-lecture-housekeeping.qmd" >}}
