--- a/sp2025/lectures/lecture-09.qmd
+++ b/sp2025/lectures/lecture-09.qmd
@@ -18,8 +18,8 @@ assignments = config.get_assignment_groups(include=['assignments']) # from Canva
 quizzes = config.get_quizzes()
 
 discussion_items = [
-    f'{expand_quiz(quizzes, "Practice Quiz 2 ","practice quiz 2", url_type="anchor", target="_blank")} - due Feb. 4, TUE',
-    f'{expand_assignment(assignments,"Homework 3 - ER Modeling ","Homework 3 - Modeling your world",url_type="anchor")} - due Feb. 4, TUE',
+    f'{expand_quiz(quizzes, "Quiz 2","Quiz 2 - Relational Algebra - Requires Respondus LockDown Browser + Webcam", url_type="anchor", target="_blank")} - due Feb. 13, THURS',
+    f'{expand_assignment(assignments,"Homework 3 - ER Modeling ","Homework 3 - Modeling your world",url_type="anchor")} - due Feb. 16, SUN',
 ]
 
 lecture_topics = [
